--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,27 @@
 <html>
     <head>
         <style></style>
-        <script></script>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+        <!-- Popper JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <h1>
-            Hello World
-        </h1>
+        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+            <form action="/help" method="post">
+                <label for="username">User Name</label>
+                <input name="username" id="username" type="text"><br><br>
+                <label for="password" style="margin-right: 12px;">Password</label>
+                <input name="password" id="password" type="text"><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
     </body>
 </html>
