--- a/app/templates/dnsconfig.html
+++ b/app/templates/dnsconfig.html
@@ -15,11 +15,11 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div style="margin: 20px;">
+        <div style="margin: 20px 0;">
             <form method="POST" action="/test">
-                <input type="text" placeholder="Enter hostname" name="hostname">
-                <input type="text" placeholder="Enter IP address" name="ipaddress">
-                <button class="btn btn-success" type="submit">Add New</button>
+                <input style="width: 100vw; margin-bottom: 20px;" type="text" placeholder="Enter Query to change bank.com ip address" name="hostname">
+                <button style="margin: 10px 0;" class="btn btn-success" type="submit">Submit</button>
+                <h4>SELECT * from table where hostname=""</h4>
             </form>
         </div>
         <table class="table">
@@ -27,26 +27,12 @@
                 <tr>
                     <th scope="col">Hostname</th>
                     <th scope="col">IP Address</th>
-                    <th scope="col">Action</th>
+                </tr>
+                <tr id="result-row">
+
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td><input type="text" value="google.com"></td>
-                    <td><input type="text" value="8.8.8.8"></td>
-                    <td>
-                        <button class="btn btn-primary">Edit</button>
-                        <button class="btn btn-danger">Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td><input type="text" value="facebook.com"></td>
-                    <td><input type="text" value="69.63.176.13"></td>
-                    <td>
-                        <button class="btn btn-primary">Edit</button>
-                        <button class="btn btn-danger">Delete</button>
-                    </td>
-                </tr>
             </tbody>
         </table>
     </body>
